# trustee

./: .dockerignore  .gitignore  .lycheeignore  AGENTS.md  CHANGELOG.md  CODEOWNERS  Cargo-test.toml  Cargo.toml  DEVELOPMENT.md  Dockerfile  Dockerfile.as  Dockerfile.dev  Dockerfile.rvps  Makefile  README.md  build.rs  check-h100.sh  default_policy.rego  docker-compose.yml  install-ssm.sh  quickstart.md  release-guide.md  renovate.json  rust-toolchain.toml  spot-spec.json  test_spiffe_cert.rs
api/: Cargo.toml
api/src/: attest.rs  config.rs  lib.rs  public.rs  resource.rs
attestation/: Cargo.toml  build.rs
attestation-service/: .dockerignore  .gitignore  CODEOWNERS  Cargo.toml  Dockerfile.as  Dockerfile.as-grpc  Dockerfile.as-restful  Dockerfile.rvps  Makefile  README.md  build.rs  config.json
attestation-service/as-types/src/: lib.rs
attestation-service/attestation-service/: Cargo.toml  build.rs
attestation-service/attestation-service/src/: config.rs  lib.rs  utils.rs
attestation-service/docker/as-grpc/: Dockerfile
attestation-service/docker/as-restful/: Dockerfile
attestation-service/docs/: amd-offline-certificate-cache.md  attestation_token.md  claims.md  config.md  example.token.json  grpc-as.md  parsed_claims.md  policy.md  restful-as.md  rvps.md  sgx_default_qcnl.conf  tcb_claims.md
attestation-service/podman/grpc-as/: Containerfile
attestation-service/podman/restful-as/: Containerfile
attestation-service/policy/: ear_default_policy_gpu.rego
attestation-service/protos/: attestation.proto
attestation-service/rvps/: Cargo.toml  Dockerfile  README.md  build.rs
attestation-service/rvps/cgo/: go.mod  go.sum  intoto.go
attestation-service/rvps/src/: config.rs  lib.rs  native.rs  reference_value.rs
attestation-service/src/: config.rs  lib.rs  utils.rs
attestation-service/src/cgo/: go.mod  go.sum
attestation-service/src/ear_token/: broker.rs  ear_default_policy_cpu.rego  ear_default_policy_gpu.rego  ear_default_policy_ppcie.rego  ear_default_policy_switch.rego  mod.rs
attestation-service/src/policy_engine/: mod.rs
attestation-service/src/rvps/: builtin.rs  grpc.rs  mod.rs  reference.rs  reference_grpc.rs  reference_value.rs
attestation-service/src/token/: ear_broker.rs  ear_default_policy.rego  ear_default_policy_cpu.rego  ear_default_policy_gpu.rego  mod.rs  simple.rs  simple_default_policy.rego
attestation-service/src/verifier/: mod.rs
attestation-service/tests/: capabilities.json
attestation-service/tests/coco-as/: grpc-request.json  request.json  restful-request.json
attestation-service/tests/configs/: example1.json  example2.json  example3.json  example4.json  example_with_tpm_verifier.json
attestation-service/tests/e2e/: Makefile  evidence.json  grpc-request.json.template  raw-runtime-data  request.json.template  restful-request.json.template
attestation-service/tests/policy/: ear_sample.rego
attestation-service/verifier/: Cargo.toml
attestation-service/verifier/hack/: parse_hdr.py
attestation-service/verifier/src/: lib.rs
attestation-service/verifier/test_data/: az-vcek.pem
attestation/src/: lib.rs
attestation/src/coco/: builtin.rs  grpc.rs
integration-tests/: Cargo.toml
integration-tests/src/: common.rs  lib.rs
integration-tests/tests/: admin.rs  get_resource.rs  init-data-with-policy.toml  init_data.rs  integration.rs
internal/: Cargo.toml
internal/src/: auth.rs  config.rs  lib.rs
kbs/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  docker-compose.yml  quickstart.md
kbs/.github/: dependabot.yml
kbs/config/: as-config.json  kbs-config-dev.toml  kbs-config-grpc.toml  kbs-config-intel-trust-authority.toml  kbs-config-keylime-as.toml  kbs-config.toml  rvps.json  sgx_default_qcnl.conf
kbs/docker/: Dockerfile  Dockerfile.amber  Dockerfile.coco-as-grpc  Dockerfile.fidencio  Dockerfile.intel-trust-authority  Dockerfile.rhel-ubi
kbs/docs/: PLUGIN_GUIDE.md  admin.md  attestation_token_verification.md  cluster.md  confidential-containers-eventlog.md  config.md  ext_plugin.md  id-key.md  initdata.md  kbs.yaml  kbs_attestation_protocol.md  metrics.md  pki_vault.md  resource_repository.md  resource_storage_backend.md  self-signed-https.md  vault_kv.md
kbs/hack/: ci-helper.sh
kbs/policy/: README.md  allow_all.rego  default_policy.rego
kbs/proto/: attestation.proto
kbs/sample_policies/: README.md  affirming.rego  allow_all.rego  default.rego  deny_all.rego
kbs/src/: akp.rs  api_server.rs  auth.rs  config.rs  error.rs  http.rs  jwe.rs  lib.rs  prometheus_exporter.rs  session.rs  trust_context.rs
kbs/src/admin/: config.rs  (+6 more)
kbs/test/: .gitignore  Makefile  external_plugin_test_server.rs  setup-swtpm.sh
kbs/test-data/: policy.rego
kbs/tests/: get_resource.rs  integration.rs
lib/: Cargo.toml  build.rs
lib/src/: lib.rs
resource/: Cargo.toml
resource/src/: lib.rs  local_fs.rs
rust-sdk/: Cargo.toml  README.md  build.rs
rust-sdk/examples/: echo.rs  resource_plugin.rs
rust-sdk/src/: health.rs  lib.rs  server.rs  tls.rs
rvps/: .gitignore  Cargo.toml  Makefile  README.md  build.rs
rvps/cgo/: go.mod  go.sum
rvps/docker/: Dockerfile
rvps/docs/: reference-value-uri.md
rvps/podman/: Containerfile
rvps/src/: config.rs  lib.rs  native.rs  reference_value.rs
server/: Cargo.toml  README.md  build.rs
server/proto/: attestation.proto  management.proto
server/src/: attestation.rs  main.rs  management.rs  user.rs
session/: Cargo.toml
session/src/: lib.rs
sgx_dcap_quoteverify_stubs/: libsgx-dcap-default-qpl-1.21.100.3-1.el9.x86_64.rpm  libsgx-dcap-quote-verify-1.21.100.3-1.el9.x86_64.rpm  meson.build  sgx_dcap_quoteverify_stub.cpp
src/api/: Cargo.toml  build.rs
src/api_server/: Cargo.toml
src/kbs/: Cargo.toml
token/: Cargo.toml
token/src/: lib.rs  simple.rs
tools/client/: Cargo.toml  README.md
tools/kbs-client/: Cargo.toml  README.md  attest.sh  auth.sh
tools/rvps-client/: Cargo.toml  build.rs
tools/trustee/: Cargo.toml  Dockerfile
tools/trustee-cli/: Cargo.toml  Dockerfile  Makefile
trustee/: Cargo.toml
trustee/src/: aliases.rs  cli.rs  main.rs
(+600 files in other folders)
