[workspace]
members = [
    "kbs",
    "attestation-service",
    "rvps",
    "tools/kbs-client",
    "deps/verifier",
    "deps/eventlog",
    "integration-tests",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["The Confidential Container Authors"]
description = "Confidential Container Tools and Components for the tenant side"
documentation = "https://github.com/confidential-containers/kbs"
edition = "2021"

[workspace.dependencies]
actix-web = "4"
actix-web-httpauth = "0.8.2"
anyhow = "1.0"
assert-json-diff = "2.0.2"
async-trait = "0.1.88"
base64 = "0.22.1"
byteorder = "1.5.0"
cfg-if = "1.0.0"
chrono = "0.4.41"
clap = { version = "4", features = ["derive"] }
config = "0.14.1"
ear = "0.3.0"
env_logger = "0.10.0"
hex = "0.4.3"
jwt-simple = { version = "0.12", default-features = false, features = [
    "pure-rust",
] }
kbs_protocol = { git = "https://github.com/confidential-containers/guest-components.git", rev = "cc8c14a", default-features = false }
# TODO: Change this to kbs-types release
kbs-types = { "git" = "https://github.com/virtee/kbs-types.git", rev = "e3cc706" }
kms = { git = "https://github.com/confidential-containers/guest-components.git", rev = "cc8c14a", default-features = false }
jsonwebtoken = { version = "9", default-features = false }
lazy_static = "1.4.0"
log = "0.4.28"
openssl = "0.10.73"
p256 = "0.13.2"
prost = "0.13"
regorus = { version = "0.2.6", default-features = false, features = [
    "regex",
    "base64",
    "time",
    "std",
] }
reqwest = { version = "0.12", default-features = false, features = [
    "default-tls",
] }
rstest = "0.18.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
serde_qs = "0.13.0"
serde_with = { version = "3.14.0", features = ["base64", "hex"] }
serial_test = { version = "3.2.0", features = ["async"] }
sha2 = "0.10"
shadow-rs = "1.3.0"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1", features = ["full"], default-features = false }
toml = "0.9.5"
tempfile = "3.20.0"
tonic = "0.12"
tonic-build = "0.12"
