[package]
name = "attestation-service"
version = "0.1.0"
edition = "2021"

[features]
default = [ "rvps-native", "all-verifier" ]
all-verifier = [ "tdx-verifier", "sgx-verifier", "snp-verifier", "az-snp-vtpm-verifier" ]
tdx-verifier = [ "eventlog-rs", "scroll", "intel-tee-quote-verification-rs" ]
sgx-verifier = [ "scroll", "intel-tee-quote-verification-rs" ]
az-snp-vtpm-verifier = [ "az-snp-vtpm", "sev" ]
snp-verifier = [ "asn1-rs", "openssl", "sev", "x509-parser" ]

rvps-native = []
rvps-grpc = [ "tonic" ]

[dependencies]
anyhow.workspace = true
asn1-rs = { version = "0.5.1", optional = true }
async-trait.workspace = true
as-types = { path = "../as-types" }
az-snp-vtpm = { version = "0.2", default-features = false, features = ["verifier"], optional = true }
base64 = "0.13.0"
bincode = "1.3.3"
byteorder = "1"
cfg-if = "1.0.0"
chrono = { version = "0.4.19", features = [ "serde" ] }
eventlog-rs = { version = "0.1.3", optional = true }
futures = "0.3.17"
hex = "0.4.3"
intel-tee-quote-verification-rs = { version = "0.2.1", optional = true }
kbs-types = "0.3"
lazy_static = "1.4.0"
log.workspace = true
openssl = { version = "0.10.43", optional = true }
path-clean = "0.1.0"
prost.workspace = true
scroll = { version = "0.11.0", default-features = false, features = ["derive"], optional = true }
serde.workspace = true
serde_json.workspace = true
sev = { version = "= 1.1.0", features = ["openssl"], optional = true }
sha2.workspace = true
shadow-rs.workspace = true
sled = "0.34.7"
strum = "0.24.0"
strum_macros = "0.24.0"
tempfile = "3.3.0"
tokio.workspace = true
tonic = { workspace = true, optional = true }
uuid = { version = "1.1.2", features = ["v4"] }
x509-parser = { version = "0.14.0", optional = true }

[build-dependencies]
shadow-rs.workspace = true
tonic-build.workspace = true

[dev-dependencies]
rstest.workspace = true
serial_test.workspace = true
sha2.workspace = true
testing_logger = "0.1.1"
walkdir = "2.3.2"
