[package]
name = "attestation-service"
version = "0.1.0"
edition = "2021"

[features]
default = ["grpc-bin", "rvps-grpc"]
all-verifier = ["verifier/all-verifier"]
tdx-verifier = ["verifier/tdx-verifier"]
sgx-verifier = ["verifier/sgx-verifier"]
az-snp-vtpm-verifier = ["verifier/az-snp-vtpm-verifier"]
az-tdx-vtpm-verifier = ["verifier/az-tdx-vtpm-verifier"]
snp-verifier = ["verifier/snp-verifier"]
csv-verifier = ["verifier/csv-verifier"]
hygon-dcu-verifier = ["verifier/hygon-dcu-verifier"]
cca-verifier = ["verifier/cca-verifier"]
se-verifier = ["verifier/se-verifier"]
nvidia-verifier = ["verifier/nvidia-verifier"]
tpm-verifier = ["verifier/tpm-verifier"]

rvps-grpc = ["prost", "tonic"]

# For building gRPC CoCo-AS binary
grpc-bin = ["clap", "prost", "tonic", "tonic-prost"]

# For restful CoCo-AS binary
restful-bin = ["actix-cors", "actix-web/openssl", "clap"]

[[bin]]
name = "grpc-as"
required-features = ["grpc-bin"]

[[bin]]
name = "restful-as"
required-features = ["restful-bin"]

[dependencies]
actix-web = { workspace = true, optional = true }
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
canon-json = "0.2.1"
cfg-if.workspace = true
clap = { workspace = true, optional = true }
ear.workspace = true
futures = "0.3.17"
hex.workspace = true
jsonwebtoken.workspace = true
kbs-types.workspace = true
key-value-storage.path = "../deps/key-value-storage"
lazy_static.workspace = true
openssl.workspace = true
policy-engine.path = "../deps/policy-engine"
prost = { workspace = true, optional = true }
rand = "0.8.5"
reference-value-provider-service.path = "../rvps"
regorus.workspace = true
rsa = { version = "0.9.10", features = ["sha2"] }
serde.workspace = true
serde_json.workspace = true
serde_variant = "0.1.2"
sha2.workspace = true
shadow-rs.workspace = true
strum.workspace = true
tempfile.workspace = true
time = { version = "0.3.40", features = ["std"] }
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tonic = { workspace = true, optional = true }
tonic-prost = { workspace = true, optional = true }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { version = "1.19.0", features = ["v4"] }
verifier = { path = "../deps/verifier", default-features = false }
actix-cors = { version = "0.7", optional = true }

[build-dependencies]
shadow-rs.workspace = true
tonic-prost-build.workspace = true

[dev-dependencies]
assert-json-diff.workspace = true
hex.workspace = true
rstest.workspace = true
serial_test.workspace = true
sha2.workspace = true
testing_logger = "0.1.1"
