[package]
name = "integration-tests"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies] 
kbs = { path = "../kbs" }
attestation-service = { path = "../attestation-service" }
kbs-client = { path = "../tools/kbs-client" }

actix-web.workspace = true
actix-rt = "2.10.0"
anyhow.workspace = true
env_logger.workspace = true
log.workspace = true
openssl.workspace = true
rstest.workspace = true
serde_json.workspace = true
serial_test.workspace = true
tempfile.workspace = true
tokio.workspace = true
