[package]
name = "kbs"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[features]
default = ["coco-as-builtin", "coco-as-grpc", "intel-trust-authority-as"]

# Support a backend attestation service for KBS
as = []

# Use CoCo-AS as backend attestation service
coco-as = ["as"]

# Use built-in CoCo-AS as backend attestation service
coco-as-builtin = ["coco-as", "attestation-service/default"]

# Use built-in CoCo-AS as backend attestation service without verifier
coco-as-builtin-no-verifier = ["coco-as"]

# Use remote gRPC CoCo-AS as backend attestation service
coco-as-grpc = ["coco-as", "mobc", "tonic", "tonic-build", "prost"]

# Use Intel TA as backend attestation service
intel-trust-authority-as = ["as", "az-cvm-vtpm"]

# Use aliyun KMS as KBS backend
aliyun = ["kms/aliyun"]

# Use pkcs11 plugin
pkcs11 = ["cryptoki"]

# Use Nebula Certificate Authority plugin to provide CA services to nodes
# that want to join a Nebula overlay network
nebula-ca-plugin = []

# Use HashiCorp Vault KV v1 as KBS backend
vault = ["vaultrs"]

[dependencies]
actix = "0.13.5"
actix-web = { workspace = true, features = ["openssl"] }
actix-web-httpauth.workspace = true
aes-gcm = "0.10.1"
aes-kw = "0.2.1"
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
cfg-if.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
config.workspace = true
concat-kdf = "0.1.0"
cryptoki = { version = "0.10.0", optional = true }
env_logger.workspace = true
hex.workspace = true
jsonwebtoken = { workspace = true, default-features = false }
jwt-simple.workspace = true
kbs-types.workspace = true
kms = { workspace = true, default-features = false }
lazy_static.workspace = true
log.workspace = true
mobc = { version = "0.9.0", optional = true }
p256 = { workspace = true, features = ["ecdh"] }
prometheus = "0.14.0"
prost = { workspace = true, optional = true }
rand = "0.8.5"
regex = "1.11.1"
regorus.workspace = true
reqwest = { workspace = true, features = ["json"] }
rsa = { version = "0.9.2", features = ["sha2"] }
scc = "2"
serde_qs.workspace = true
semver = "1.0.16"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
strum.workspace = true
tempfile.workspace = true
thiserror.workspace = true
time = { version = "0.3.40", features = ["std"] }
tokio.workspace = true
tonic = { workspace = true, optional = true }
uuid = { version = "1.18.0", features = ["serde", "v4"] }
openssl.workspace = true
az-cvm-vtpm = { version = "0.7.4", default-features = false, optional = true }
derivative = "2.2.0"
vaultrs = { version = "0.7.4", optional = true }

[target.'cfg(not(any(target_arch = "s390x", target_arch = "aarch64")))'.dependencies]
attestation-service = { path = "../attestation-service", default-features = false, features = [
    "all-verifier",
], optional = true }

[target.'cfg(target_arch = "s390x")'.dependencies]
attestation-service = { path = "../attestation-service", default-features = false, features = [
    "se-verifier",
], optional = true }

[target.'cfg(target_arch = "aarch64")'.dependencies]
attestation-service = { path = "../attestation-service", default-features = false, features = [
    "cca-verifier",
], optional = true }


[dev-dependencies]
josekit = "0.10.3"
tempfile.workspace = true
rstest.workspace = true
reference-value-provider-service.path = "../rvps"
serial_test = "3.0"
toml = "0.9"

[build-dependencies]
tonic-build = { workspace = true, optional = true }
chrono.workspace = true
