[package]
name = "attestation-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "attestation-service-ctl"
path = "tools/attestation-service-ctl/src/main.rs"

[dependencies]
shadow-rs = "0.5.25"
log = "0.4.14"
env_logger = "0.8.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
tokio = { version = "1.0", features = ["full"] }
tonic = "0.5"
prost = "0.8"
clap = { version = "3.2.6", features = ["derive"] }
attestation-service = { path = "../lib" }
uuid = { version = "0.4", features = ["v4"] }
sha2 = "0.10"
base64 = "0.13.0"
lazy_static = "1.4.0"

[build-dependencies]
shadow-rs = "0.5.25"
tonic-build = "0.5"
