[package]
name = "attestation-service"
version = "0.1.0"
edition = "2021"

[features]
default = [ "rvps-grpc", "rvps-builtin", "all-verifier" ]
all-verifier = [ "verifier/all-verifier" ]
tdx-verifier = [ "verifier/tdx-verifier" ]
sgx-verifier = [ "verifier/sgx-verifier" ]
az-snp-vtpm-verifier = [ "verifier/az-snp-vtpm-verifier" ]
snp-verifier = [ "verifier/snp-verifier" ]
csv-verifier = [ "verifier/csv-verifier" ]
cca-verifier = [ "verifier/cca-verifier" ]

# Only for testing and CI
rvps-builtin = [ "reference-value-provider-service" ]

rvps-grpc = [ "tonic" ]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64 = "0.21"
cfg-if = "1.0.0"
futures = "0.3.17"
# TODO: change it to "0.5", once released.
kbs-types = { git = "https://github.com/virtee/kbs-types", rev = "c90df0e" }
lazy_static = "1.4.0"
log.workspace = true
openssl = { version = "0.10.55", optional = true }
prost.workspace = true
rand = "0.8.5"
rsa = { version = "0.9.2", features = ["sha2"] }
reference-value-provider-service = { path = "../rvps", optional = true }
serde.workspace = true
serde_json.workspace = true
serde_variant = "0.1.2"
sha2.workspace = true
shadow-rs.workspace = true
strum.workspace = true
time = { version = "0.3.23", features = ["std"] }
tokio.workspace = true
tonic = { workspace = true, optional = true }
uuid = { version = "1.1.2", features = ["v4"] }
verifier = { path = "../verifier", default-features = false }

[build-dependencies]
shadow-rs.workspace = true
tonic-build.workspace = true

[dev-dependencies]
assert-json-diff.workspace = true
rstest.workspace = true
serial_test.workspace = true
sha2.workspace = true
testing_logger = "0.1.1"
walkdir = "2.3.2"
