[package]
name = "attestation-service"
version = "0.1.0"
edition = "2021"

[features]
default = [ "rvps-grpc", "rvps-builtin", "all-verifier" ]
all-verifier = [ "verifier/all-verifier" ]
tdx-verifier = [ "verifier/tdx-verifier" ]
sgx-verifier = [ "verifier/sgx-verifier" ]
az-snp-vtpm-verifier = [ "verifier/az-snp-vtpm-verifier" ]
snp-verifier = [ "verifier/snp-verifier" ]
csv-verifier = [ "verifier/csv-verifier" ]
cca-verifier = [ "verifier/cca-verifier" ]

# Only for testing and CI
rvps-builtin = [ "reference-value-provider-service" ]

rvps-grpc = [ "prost", "tonic" ]

# For building gRPC CoCo-AS binary
grpc-bin = [ "clap", "env_logger", "prost", "tonic" ]


[[bin]]
name = "grpc-as"
required-features = [ "bin" ]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
cfg-if.workspace = true
clap = { workspace = true, optional = true }
env_logger = { workspace = true, optional = true }
futures = "0.3.17"
hex.workspace = true
# TODO: change it to "0.5", once released.
kbs-types.workspace = true
lazy_static = "1.4.0"
log.workspace = true
openssl = { version = "0.10.55", optional = true }
prost = { workspace = true, optional = true }
rand = "0.8.5"
rsa = { version = "0.9.2", features = ["sha2"] }
reference-value-provider-service = { path = "../rvps", optional = true }
serde.workspace = true
serde_json.workspace = true
serde_variant = "0.1.2"
sha2.workspace = true
shadow-rs.workspace = true
strum.workspace = true
time = { version = "0.3.23", features = ["std"] }
tokio.workspace = true
tonic = { workspace = true, optional = true }
uuid = { version = "1.1.2", features = ["v4"] }
verifier = { path = "../verifier", default-features = false }

[build-dependencies]
shadow-rs.workspace = true
tonic-build.workspace = true

[dev-dependencies]
assert-json-diff.workspace = true
hex.workspace = true
rstest.workspace = true
serial_test.workspace = true
sha2.workspace = true
testing_logger = "0.1.1"
